--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>To-Do List Application</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div id="todo-app">
@@ -14,6 +15,6 @@
             <!-- Tasks will be listed here -->
         </ul>
     </div>
-    <script src="script.js"></script>
+    
 </body>
 </html>
